# example_omp

./: CMakeLists.txt  main.cpp
pi/: pi.cpp
